src/argocd/bootstrap-resources/jellyfin/deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyfin
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyfin
    spec:
      containers:
      - name: jellyfin
        image: docker.io/linuxserver/jellyfin:amd64-10.10.3
        imagePullPolicy: Always
        ports:
          - containerPort: 8096
            name: http-jellyfin
            protocol: TCP
        volumeMounts:
          - name: jellyfin-config
            mountPath: /config
          - name: media
            mountPath: /media
          - name: tmpfs
            mountPath: /transcode
        livenessProbe:
          httpGet:
            path: /health
            port: http-jellyfin
          initialDelaySeconds: 300
          periodSeconds: 10
      volumes:
      - name: jellyfin-config
        persistentVolumeClaim:
          claimName: jellyfin-config-pvc
      - name: media
        nfs:
          path: /mnt/hdd/media
          server: 10.1.60.6
      - name: tmpfs
        emptyDir:
          medium: Memory

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyseerr
  labels:
    app.kubernetes.io/name: jellyseerr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: jellyseerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: jellyseerr
    spec:
      containers:
      - name: jellyseerr
        image: docker.io/fallenbagel/jellyseerr:2.3.0
        imagePullPolicy: Always
        ports:
          - containerPort: 5055
            name: http-jellyseerr
            protocol: TCP
        volumeMounts:
          - name: jellyseerr-config
            mountPath: /app/config
      volumes:
      - name: jellyseerr-config
        persistentVolumeClaim:
          claimName: jellyseerr-config-pvc
