src/argocd/bootstrap-resources/jellyfin/services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    ryanb.tv/app: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
  - name: http
    protocol: TCP
    port: 8096
    targetPort: http-jellyfin
