src/argocd/bootstrap-resources/jellyfin/ingresses.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyfin
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`media.ryanb.tv`) && !Path(`/metrics`)
      kind: Rule
      services:
        - name: jellyfin
          kind: Service
          port: http
  tls: {}

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: jellyseerr
  annotations:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`requests.ryanb.tv`)
      kind: Rule
      services:
        - name: jellyseerr
          kind: Service
          port: http
  tls: {}
